# RAG-App

./: .env  .gitignore  README.md  data_loader.py  main.py  pyproject.toml  requirements.txt
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/49e710d4-519f-4c11-bbb2-2b8e8208abde/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/4c0c2026-9bee-48eb-8ab9-fec00f6d752a/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/5e8a3d0b-c5bf-49e5-b376-4fdc46199f97/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/8a15b8f2-88ed-44c6-808f-58670f3f6741/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/9b1520e6-f0cc-4330-967a-ec2ae7109952/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/aaf22a4b-712c-4d7a-9dbc-14f14cd9c0e6/payload_index/: IDENTITY  LOG  MANIFEST-000005
